# Integral

./: .gitignore  CMakeLists.txt  main
src/: main.cpp  test_main
